# Mindora-AI-Therapist

./: README.md  app.py  frontend.py  pyproject.toml  requirements.txt
backend/: ai_agent.py  config.py  main.py  tools.py
